
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int execve (char*,char**,int *) ;

void exec_shell() {
 char* shell = "/bin/bash";
 char* args[] = {shell, "-i", ((void*)0)};
 execve(shell, args, ((void*)0));
}
