; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43418.c_exec_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_43418.c_exec_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [10 x i8] c"/bin/bash\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"-i\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @exec_shell() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca [3 x i8*], align 16
  store i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %3 = getelementptr inbounds [3 x i8*], [3 x i8*]* %2, i64 0, i64 0
  %4 = load i8*, i8** %1, align 8
  store i8* %4, i8** %3, align 8
  %5 = getelementptr inbounds i8*, i8** %3, i64 1
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8** %5, align 8
  %6 = getelementptr inbounds i8*, i8** %5, i64 1
  store i8* null, i8** %6, align 8
  %7 = load i8*, i8** %1, align 8
  %8 = getelementptr inbounds [3 x i8*], [3 x i8*]* %2, i64 0, i64 0
  %9 = call i32 @execve(i8* %7, i8** %8, i32* null)
  ret void
}

declare dso_local i32 @execve(i8*, i8**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
